[package]
name = "AxisAutoConfig"
version = "0.9.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "fs"] }
socket2 = { version = "0.5", features = ["all"] }
pnet = "0.35.0"
ipnetwork = "0.21.1"
rand = {version = "0.9.1", features = ["std_rng"]}
log = "0.4"
env_logger = "0.11.8"
anyhow = "1.0"
thiserror = "2.0.12"
parking_lot = "0.12"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.21", features = ["json", "rustls-tls", "multipart", "stream"] }
surge-ping = "0.8"  # Alternative to subprocess ping
url = "2.5"
base64 = "0.22"  # For HTTP digest auth if needed
tokio-util = { version = "0.7", features = ["codec", "io"] }
serde_json = "1.0"
csv = "1.2"
calamine = "0.24"  # Excel file reader/writer
rust_xlsxwriter = "0.78"  # Excel file writer
egui = "0.31.1"
egui-aesthetix = { version = "0.2.4", features = ["nord"] }
eframe = "0.31.1"
rfd = "0.15.3"
network-interface = "2.0.1"
diqwest = "3.1.0"
futures = "0.3.31"
egui_alignments = "0.3.4"
http-auth= "0.1.10"
md5 = "0.8.0"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "iphlpapi"] }

[target.'cfg(windows)'.rustflags]
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# === For macOS App Bundling ===
[package.metadata.bundle]
name = "Axis Config Tool" 
identifier = "com.tylans.axisconfigtool"
icon = ["icon.icns"]
resources = []
category = "Productivity"
